# V-SLAM-code

ch3/examples/: CMakeLists.txt  coordinateTransform.cpp  plotTrajectory.cpp
ch3/test/: CMakeLists.txt  bookTest.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  useGeometry.cpp
ch4/: CMakeLists.txt  trajectoryError.cpp  useSophus.cpp
